feat: organize tabs

--- a/.i18nrc.json
+++ b/.i18nrc.json
@@ -3,5 +3,5 @@
   "paths": {
     "integratorUi": "."
   },
-  "translations": ["translations/ja-JP.json"]
+  "translations": ["translations/pt-BR.json"]
 }
