feat: improve azure page

--- a/.i18nrc.json
+++ b/.i18nrc.json
@@ -3,5 +3,5 @@
   "paths": {
     "integratorUi": "."
   },
-  "translations": ["translations/pt-BR.json"]
+  "translations": ["translations/en-US.json", "translations/pt-BR.json"]
 }
